apps/paperless/base/paperless/paperless-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: paperless
spec:
  selector:
    matchLabels:
      app: paperless
  template:
    metadata:
      labels:
        app: paperless
    spec:
      containers:
        - name: paperless
          image: ghcr.io/paperless-ngx/paperless-ngx:latest
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              memory: "128Mi"
              cpu: "500m"
          ports:
            - containerPort: 8000
              name: http
          
          volumeMounts:
            - name: data
              mountPath: /usr/src/paperless/data
            - name: media
              mountPath: /usr/src/paperless/media
      
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: paperless-data
        - name: media
          persistentVolumeClaim:
            claimName: paperless-media
