apps/paperless/base/paperless/paperless-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: paperless
spec:
  selector:
    app: paperless
  ports:
  - port: 80
    targetPort: http
    name: http
